// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Identity Unit Tests Defaults - Nested 1`] = `
Object {
  "Resources": Object {
    "DefaultsNestedIdentityPool73A8A64B": Object {
      "DependsOn": Array [
        "DefaultsNestedUserPool567C619B",
        "DefaultsNestedUserPoolsmsRole9E53925E",
        "DefaultsNestedUserPoolWebClient15C5E297",
      ],
      "Properties": Object {
        "AllowUnauthenticatedIdentities": false,
        "CognitoIdentityProviders": Array [
          Object {
            "ClientId": Object {
              "Ref": "DefaultsNestedUserPoolWebClient15C5E297",
            },
            "ProviderName": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "cognito-idp.",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ".",
                  Object {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  Object {
                    "Ref": "DefaultsNestedUserPool567C619B",
                  },
                ],
              ],
            },
            "ServerSideTokenCheck": true,
          },
        ],
      },
      "Type": "AWS::Cognito::IdentityPool",
    },
    "DefaultsNestedIdentityPoolAuthenticatedRoleA6E986E9": Object {
      "DependsOn": Array [
        "DefaultsNestedUserPool567C619B",
        "DefaultsNestedUserPoolsmsRole9E53925E",
        "DefaultsNestedUserPoolWebClient15C5E297",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "authenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsNestedIdentityPool73A8A64B",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Authenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsNestedIdentityPool73A8A64B",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsNestedIdentityPoolDefaultRoleAttachment5574AB70": Object {
      "DependsOn": Array [
        "DefaultsNestedUserPool567C619B",
        "DefaultsNestedUserPoolsmsRole9E53925E",
        "DefaultsNestedUserPoolWebClient15C5E297",
      ],
      "Properties": Object {
        "IdentityPoolId": Object {
          "Ref": "DefaultsNestedIdentityPool73A8A64B",
        },
        "Roles": Object {
          "authenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsNestedIdentityPoolAuthenticatedRoleA6E986E9",
              "Arn",
            ],
          },
          "unauthenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsNestedIdentityPoolUnauthenticatedRole28BCB3F0",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPoolRoleAttachment",
    },
    "DefaultsNestedIdentityPoolUnauthenticatedRole28BCB3F0": Object {
      "DependsOn": Array [
        "DefaultsNestedUserPool567C619B",
        "DefaultsNestedUserPoolsmsRole9E53925E",
        "DefaultsNestedUserPoolWebClient15C5E297",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "unauthenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsNestedIdentityPool73A8A64B",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Unauthenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsNestedIdentityPool73A8A64B",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsNestedUserPool567C619B": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AccountRecoverySetting": Object {
          "RecoveryMechanisms": Array [
            Object {
              "Name": "verified_email",
              "Priority": 1,
            },
          ],
        },
        "AdminCreateUserConfig": Object {
          "AllowAdminCreateUserOnly": true,
        },
        "AliasAttributes": Array [
          "email",
        ],
        "AutoVerifiedAttributes": Array [
          "email",
          "phone_number",
        ],
        "DeletionProtection": "ACTIVE",
        "EmailVerificationMessage": "The verification code to your new account is {####}",
        "EmailVerificationSubject": "Verify your new account",
        "EnabledMfas": Array [
          "SMS_MFA",
          "SOFTWARE_TOKEN_MFA",
        ],
        "MfaConfiguration": "ON",
        "Policies": Object {
          "PasswordPolicy": Object {
            "MinimumLength": 8,
            "RequireLowercase": true,
            "RequireNumbers": true,
            "RequireSymbols": true,
            "RequireUppercase": true,
            "TemporaryPasswordValidityDays": 3,
          },
        },
        "Schema": Array [
          Object {
            "Mutable": true,
            "Name": "phone_number",
            "Required": false,
          },
          Object {
            "Mutable": true,
            "Name": "email",
            "Required": true,
          },
          Object {
            "Mutable": true,
            "Name": "given_name",
            "Required": true,
          },
          Object {
            "Mutable": true,
            "Name": "family_name",
            "Required": true,
          },
        ],
        "SmsConfiguration": Object {
          "ExternalId": "NestedStackDefaultsNestedUserPoolF08F152B",
          "SnsCallerArn": Object {
            "Fn::GetAtt": Array [
              "DefaultsNestedUserPoolsmsRole9E53925E",
              "Arn",
            ],
          },
        },
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "UserAttributeUpdateSettings": Object {
          "AttributesRequireVerificationBeforeUpdate": Array [
            "email",
            "phone_number",
          ],
        },
        "UserPoolAddOns": Object {
          "AdvancedSecurityMode": "ENFORCED",
        },
        "UsernameConfiguration": Object {
          "CaseSensitive": false,
        },
        "VerificationMessageTemplate": Object {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "The verification code to your new account is {####}",
          "EmailSubject": "Verify your new account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Retain",
    },
    "DefaultsNestedUserPoolWebClient15C5E297": Object {
      "Properties": Object {
        "AllowedOAuthFlows": Array [
          "implicit",
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": Array [
          "profile",
          "phone",
          "email",
          "openid",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": Array [
          "https://example.com",
        ],
        "ExplicitAuthFlows": Array [
          "ALLOW_USER_PASSWORD_AUTH",
          "ALLOW_USER_SRP_AUTH",
          "ALLOW_REFRESH_TOKEN_AUTH",
        ],
        "SupportedIdentityProviders": Array [
          "COGNITO",
        ],
        "UserPoolId": Object {
          "Ref": "DefaultsNestedUserPool567C619B",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "DefaultsNestedUserPoolsmsRole9E53925E": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Condition": Object {
                "StringEquals": Object {
                  "sts:ExternalId": "NestedStackDefaultsNestedUserPoolF08F152B",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Service": "cognito-idp.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": "sns:Publish",
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "sns-publish",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`User Identity Unit Tests Defaults - using legacy props 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DefaultsLegacyPropsIdentityPool99521833": Object {
      "DependsOn": Array [
        "DefaultsLegacyPropsUserPoolEF40D398",
        "DefaultsLegacyPropsUserPoolsmsRole885B2281",
        "DefaultsLegacyPropsUserPoolWebClient084DDFA3",
      ],
      "Properties": Object {
        "AllowUnauthenticatedIdentities": false,
        "CognitoIdentityProviders": Array [
          Object {
            "ClientId": Object {
              "Ref": "DefaultsLegacyPropsUserPoolWebClient084DDFA3",
            },
            "ProviderName": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "cognito-idp.",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ".",
                  Object {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  Object {
                    "Ref": "DefaultsLegacyPropsUserPoolEF40D398",
                  },
                ],
              ],
            },
            "ServerSideTokenCheck": true,
          },
        ],
      },
      "Type": "AWS::Cognito::IdentityPool",
    },
    "DefaultsLegacyPropsIdentityPoolAuthenticatedRole13B826B9": Object {
      "DependsOn": Array [
        "DefaultsLegacyPropsUserPoolEF40D398",
        "DefaultsLegacyPropsUserPoolsmsRole885B2281",
        "DefaultsLegacyPropsUserPoolWebClient084DDFA3",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "authenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsLegacyPropsIdentityPool99521833",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Authenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsLegacyPropsIdentityPool99521833",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsLegacyPropsIdentityPoolDefaultRoleAttachmentC29D2D43": Object {
      "DependsOn": Array [
        "DefaultsLegacyPropsUserPoolEF40D398",
        "DefaultsLegacyPropsUserPoolsmsRole885B2281",
        "DefaultsLegacyPropsUserPoolWebClient084DDFA3",
      ],
      "Properties": Object {
        "IdentityPoolId": Object {
          "Ref": "DefaultsLegacyPropsIdentityPool99521833",
        },
        "Roles": Object {
          "authenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsLegacyPropsIdentityPoolAuthenticatedRole13B826B9",
              "Arn",
            ],
          },
          "unauthenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsLegacyPropsIdentityPoolUnauthenticatedRole933ECEDF",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPoolRoleAttachment",
    },
    "DefaultsLegacyPropsIdentityPoolUnauthenticatedRole933ECEDF": Object {
      "DependsOn": Array [
        "DefaultsLegacyPropsUserPoolEF40D398",
        "DefaultsLegacyPropsUserPoolsmsRole885B2281",
        "DefaultsLegacyPropsUserPoolWebClient084DDFA3",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "unauthenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsLegacyPropsIdentityPool99521833",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Unauthenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsLegacyPropsIdentityPool99521833",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsLegacyPropsUserPoolEF40D398": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AccountRecoverySetting": Object {
          "RecoveryMechanisms": Array [
            Object {
              "Name": "verified_email",
              "Priority": 1,
            },
          ],
        },
        "AdminCreateUserConfig": Object {
          "AllowAdminCreateUserOnly": true,
        },
        "AutoVerifiedAttributes": Array [
          "email",
        ],
        "DeletionProtection": "ACTIVE",
        "EmailVerificationMessage": "The verification code to your new account is {####}",
        "EmailVerificationSubject": "Verify your new account",
        "EnabledMfas": Array [
          "SMS_MFA",
        ],
        "MfaConfiguration": "ON",
        "Policies": Object {
          "PasswordPolicy": Object {
            "MinimumLength": 8,
            "RequireLowercase": true,
            "RequireNumbers": true,
            "RequireSymbols": true,
            "RequireUppercase": true,
            "TemporaryPasswordValidityDays": 3,
          },
        },
        "SmsConfiguration": Object {
          "ExternalId": "DefaultsLegacyPropsUserPoolF2A9E2AD",
          "SnsCallerArn": Object {
            "Fn::GetAtt": Array [
              "DefaultsLegacyPropsUserPoolsmsRole885B2281",
              "Arn",
            ],
          },
        },
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "UserPoolAddOns": Object {
          "AdvancedSecurityMode": "ENFORCED",
        },
        "VerificationMessageTemplate": Object {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "The verification code to your new account is {####}",
          "EmailSubject": "Verify your new account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Retain",
    },
    "DefaultsLegacyPropsUserPoolWebClient084DDFA3": Object {
      "Properties": Object {
        "AllowedOAuthFlows": Array [
          "implicit",
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": Array [
          "profile",
          "phone",
          "email",
          "openid",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": Array [
          "https://example.com",
        ],
        "ExplicitAuthFlows": Array [
          "ALLOW_USER_PASSWORD_AUTH",
          "ALLOW_USER_SRP_AUTH",
          "ALLOW_REFRESH_TOKEN_AUTH",
        ],
        "SupportedIdentityProviders": Array [
          "COGNITO",
        ],
        "UserPoolId": Object {
          "Ref": "DefaultsLegacyPropsUserPoolEF40D398",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "DefaultsLegacyPropsUserPoolsmsRole885B2281": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Condition": Object {
                "StringEquals": Object {
                  "sts:ExternalId": "DefaultsLegacyPropsUserPoolF2A9E2AD",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Service": "cognito-idp.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": "sns:Publish",
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "sns-publish",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`User Identity Unit Tests Defaults 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DefaultsIdentityPoolAuthenticatedRole69EA113E": Object {
      "DependsOn": Array [
        "DefaultsUserPool8771AC2E",
        "DefaultsUserPoolsmsRoleE0CA6B10",
        "DefaultsUserPoolWebClient89951652",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "authenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsIdentityPoolBA85B5EA",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Authenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsIdentityPoolBA85B5EA",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsIdentityPoolBA85B5EA": Object {
      "DependsOn": Array [
        "DefaultsUserPool8771AC2E",
        "DefaultsUserPoolsmsRoleE0CA6B10",
        "DefaultsUserPoolWebClient89951652",
      ],
      "Properties": Object {
        "AllowUnauthenticatedIdentities": false,
        "CognitoIdentityProviders": Array [
          Object {
            "ClientId": Object {
              "Ref": "DefaultsUserPoolWebClient89951652",
            },
            "ProviderName": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "cognito-idp.",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ".",
                  Object {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  Object {
                    "Ref": "DefaultsUserPool8771AC2E",
                  },
                ],
              ],
            },
            "ServerSideTokenCheck": true,
          },
        ],
      },
      "Type": "AWS::Cognito::IdentityPool",
    },
    "DefaultsIdentityPoolDefaultRoleAttachment961DF578": Object {
      "DependsOn": Array [
        "DefaultsUserPool8771AC2E",
        "DefaultsUserPoolsmsRoleE0CA6B10",
        "DefaultsUserPoolWebClient89951652",
      ],
      "Properties": Object {
        "IdentityPoolId": Object {
          "Ref": "DefaultsIdentityPoolBA85B5EA",
        },
        "Roles": Object {
          "authenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsIdentityPoolAuthenticatedRole69EA113E",
              "Arn",
            ],
          },
          "unauthenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsIdentityPoolUnauthenticatedRole863CFE8C",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPoolRoleAttachment",
    },
    "DefaultsIdentityPoolUnauthenticatedRole863CFE8C": Object {
      "DependsOn": Array [
        "DefaultsUserPool8771AC2E",
        "DefaultsUserPoolsmsRoleE0CA6B10",
        "DefaultsUserPoolWebClient89951652",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "unauthenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsIdentityPoolBA85B5EA",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Unauthenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsIdentityPoolBA85B5EA",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsUserPool8771AC2E": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AccountRecoverySetting": Object {
          "RecoveryMechanisms": Array [
            Object {
              "Name": "verified_email",
              "Priority": 1,
            },
          ],
        },
        "AdminCreateUserConfig": Object {
          "AllowAdminCreateUserOnly": true,
        },
        "AliasAttributes": Array [
          "email",
        ],
        "AutoVerifiedAttributes": Array [
          "email",
          "phone_number",
        ],
        "DeletionProtection": "ACTIVE",
        "EmailVerificationMessage": "The verification code to your new account is {####}",
        "EmailVerificationSubject": "Verify your new account",
        "EnabledMfas": Array [
          "SMS_MFA",
          "SOFTWARE_TOKEN_MFA",
        ],
        "MfaConfiguration": "ON",
        "Policies": Object {
          "PasswordPolicy": Object {
            "MinimumLength": 8,
            "RequireLowercase": true,
            "RequireNumbers": true,
            "RequireSymbols": true,
            "RequireUppercase": true,
            "TemporaryPasswordValidityDays": 3,
          },
        },
        "Schema": Array [
          Object {
            "Mutable": true,
            "Name": "phone_number",
            "Required": false,
          },
          Object {
            "Mutable": true,
            "Name": "email",
            "Required": true,
          },
          Object {
            "Mutable": true,
            "Name": "given_name",
            "Required": true,
          },
          Object {
            "Mutable": true,
            "Name": "family_name",
            "Required": true,
          },
        ],
        "SmsConfiguration": Object {
          "ExternalId": "DefaultsUserPool4C3A90C6",
          "SnsCallerArn": Object {
            "Fn::GetAtt": Array [
              "DefaultsUserPoolsmsRoleE0CA6B10",
              "Arn",
            ],
          },
        },
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "UserAttributeUpdateSettings": Object {
          "AttributesRequireVerificationBeforeUpdate": Array [
            "email",
            "phone_number",
          ],
        },
        "UserPoolAddOns": Object {
          "AdvancedSecurityMode": "ENFORCED",
        },
        "UsernameConfiguration": Object {
          "CaseSensitive": false,
        },
        "VerificationMessageTemplate": Object {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "The verification code to your new account is {####}",
          "EmailSubject": "Verify your new account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Retain",
    },
    "DefaultsUserPoolWebClient89951652": Object {
      "Properties": Object {
        "AllowedOAuthFlows": Array [
          "implicit",
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": Array [
          "profile",
          "phone",
          "email",
          "openid",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": Array [
          "https://example.com",
        ],
        "ExplicitAuthFlows": Array [
          "ALLOW_USER_PASSWORD_AUTH",
          "ALLOW_USER_SRP_AUTH",
          "ALLOW_REFRESH_TOKEN_AUTH",
        ],
        "SupportedIdentityProviders": Array [
          "COGNITO",
        ],
        "UserPoolId": Object {
          "Ref": "DefaultsUserPool8771AC2E",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "DefaultsUserPoolsmsRoleE0CA6B10": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Condition": Object {
                "StringEquals": Object {
                  "sts:ExternalId": "DefaultsUserPool4C3A90C6",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Service": "cognito-idp.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": "sns:Publish",
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "sns-publish",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`User Identity Unit Tests User provided UserPool 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DefaultsIdentityPoolAuthenticatedRole69EA113E": Object {
      "DependsOn": Array [
        "UserPool6BA7E5F2",
        "UserPoolWebClient4C9370B0",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "authenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsIdentityPoolBA85B5EA",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Authenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsIdentityPoolBA85B5EA",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DefaultsIdentityPoolBA85B5EA": Object {
      "DependsOn": Array [
        "UserPool6BA7E5F2",
        "UserPoolWebClient4C9370B0",
      ],
      "Properties": Object {
        "AllowUnauthenticatedIdentities": false,
        "CognitoIdentityProviders": Array [
          Object {
            "ClientId": Object {
              "Ref": "UserPoolWebClient4C9370B0",
            },
            "ProviderName": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "cognito-idp.",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ".",
                  Object {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  Object {
                    "Ref": "UserPool6BA7E5F2",
                  },
                ],
              ],
            },
            "ServerSideTokenCheck": true,
          },
        ],
      },
      "Type": "AWS::Cognito::IdentityPool",
    },
    "DefaultsIdentityPoolDefaultRoleAttachment961DF578": Object {
      "DependsOn": Array [
        "UserPool6BA7E5F2",
        "UserPoolWebClient4C9370B0",
      ],
      "Properties": Object {
        "IdentityPoolId": Object {
          "Ref": "DefaultsIdentityPoolBA85B5EA",
        },
        "Roles": Object {
          "authenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsIdentityPoolAuthenticatedRole69EA113E",
              "Arn",
            ],
          },
          "unauthenticated": Object {
            "Fn::GetAtt": Array [
              "DefaultsIdentityPoolUnauthenticatedRole863CFE8C",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPoolRoleAttachment",
    },
    "DefaultsIdentityPoolUnauthenticatedRole863CFE8C": Object {
      "DependsOn": Array [
        "UserPool6BA7E5F2",
        "UserPoolWebClient4C9370B0",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "unauthenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "DefaultsIdentityPoolBA85B5EA",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Default Unauthenticated Role for Identity Pool ",
              Object {
                "Fn::GetAtt": Array [
                  "DefaultsIdentityPoolBA85B5EA",
                  "Name",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "UserPool6BA7E5F2": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AccountRecoverySetting": Object {
          "RecoveryMechanisms": Array [
            Object {
              "Name": "verified_phone_number",
              "Priority": 1,
            },
            Object {
              "Name": "verified_email",
              "Priority": 2,
            },
          ],
        },
        "AdminCreateUserConfig": Object {
          "AllowAdminCreateUserOnly": true,
        },
        "EmailVerificationMessage": "The verification code to your new account is {####}",
        "EmailVerificationSubject": "Verify your new account",
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "VerificationMessageTemplate": Object {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "The verification code to your new account is {####}",
          "EmailSubject": "Verify your new account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Retain",
    },
    "UserPoolWebClient4C9370B0": Object {
      "Properties": Object {
        "AllowedOAuthFlows": Array [
          "implicit",
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": Array [
          "profile",
          "phone",
          "email",
          "openid",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": Array [
          "https://example.com",
        ],
        "ExplicitAuthFlows": Array [
          "ALLOW_USER_PASSWORD_AUTH",
          "ALLOW_USER_SRP_AUTH",
          "ALLOW_REFRESH_TOKEN_AUTH",
        ],
        "SupportedIdentityProviders": Array [
          "COGNITO",
        ],
        "UserPoolId": Object {
          "Ref": "UserPool6BA7E5F2",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
